--- a/contact.html
+++ b/contact.html
@@ -185,6 +185,7 @@
         <p class="lead">renatacummins@gmail.com</p>
          <p class="lead"><script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
         <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/renatacummins" data-format="hover" data-text="Renata Cummins" data-related="false"></script></p>
+	<p class="lead"><a href="http://github.com/rcummins">GitHub</a></p>
         <p class="lead"><a href="http://www.facebook.com/renata.cummins">Facebook</a></p>
       </div>
 
