in index.html changed the subheadline

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="jumbotron">
       <div class="container">
         <h1>Hi, I'm Renata.</h1>
-        <p class="lead">I'm a recent master's graduate seeking an entry-level environmental consultant or analyst position.</p>
+        <p class="lead">I'm a recent master's graduate seeking an environmental consultant or quantitative analyst position.</p>
 <!--        <a class="btn btn-large btn-success" href="#">Get started today</a> -->
       </div><!-- /.container -->
       </div><!-- /.jumbotron -->
