--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               <ul class="nav">
                 <li class="active"><a href="/index.html">About Me</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
+                  <a class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="/climate.html">Past climate change</a></li>
                     <li><a href="/methane.html">Methane-oxidizing microbes</a></li>
