--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
     <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
+    <script src="/assets/js/bootstrap.js"></script>
 
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
