--- a/climate.html
+++ b/climate.html
@@ -10,7 +10,7 @@
 
     <!-- javascript -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
+    <script src="/assets/js/bootstrap.js"></script>
 
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
