deleted R from list of programs I used for data processing

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/quantitative.JPG">
         <h2 class="featurette-heading">Quantitative background. </h2>
-        <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made frequent use of Excel, MATLAB and R for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propagating error. Check out some examples of my code in MATLAB, LaTeX and SQL on my <a href="http://github.com/rcummins">GitHub page</a>. </p>
+        <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made frequent use of Excel and MATLAB for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propagating error. Check out some examples of my code in MATLAB, LaTeX and SQL on my <a href="http://github.com/rcummins">GitHub page</a>. </p>
       </div>
 
       <hr class="featurette-divider">
